--- a/index.html
+++ b/index.html
@@ -1,7 +1,26 @@
 <html>
 	<head>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
+		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
-		Hello world!
+		<nav class="navbar navbar-expand-lg">
+			<ul class="navbar-nav">
+				<li class="active">
+					<a href="#" class="nav-link">Home</a>
+				</li>
+				<li class="nav-item">
+					<a href="#" class="nav-link">Product</a>
+				</li>
+				
+				<li class="nav-item">
+					<a href="#" class="nav-link">Contact Us</a>
+				</li>
+			</ul>
+		</nav>
 	</body>
 </html>
