Correcao dos esqueletos e musculos

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 			<div class="row">
 				<div class="col-md-4 mb-3 wow bounceInUp" data-wow-duration="1.4s">
 					<div class="big-img">
-						<img src="./me.jpg"
+						<img src="./img/me.jpg"
 							class="img-fluid">
 					</div>
 				</div>
@@ -94,28 +94,27 @@
 	<section class="testimonials mybg-events">
 
 		<div class="container">
-
 			<div class="row">
 				<div class="col-md-12 wow fadeInUp">
-					<h3 class="title-heading text-center">O QUE É ANATOMIA</h3>
-					<p class="myp text-center">A Anatomia Humana é a ciência que estuda as estruturas corporais, como elas se formam e como funcionam em conjunto no corpo(sistemas).</p>
+					<h3 class="title-heading text-center" style="color: black;">O QUE É ANATOMIA</h3>
+					<p class="myp text-center" style="color: black;">A Anatomia Humana é a ciência que estuda as estruturas corporais, como elas se formam e como funcionam em conjunto no corpo(sistemas).</p>
 				</div>
 			</div>
 			<div class="container">
 				<div class="content">
 					<div class="grid">
 						<figure class="effect-ravi">
-							<img src="./esqueleto.jpg" alt="img12" style="background-size: cover;" />
+							<img src="./img/esqueleto.jpg" alt="img12" style="background-size: cover;" />
 							<figcaption>
 								<div style="padding-top: 0px!important">
-									<h2>Osteologia</h2>
+									<h2>Sistema esquelético</h2>
 									<p style="width: 220px;text-align: justify">A Osteologia é o ramo da anatomia que estuda a estrutura, forma e desenvolvimento dos Ossos e das articulações.</p>
 								</div>
-								<a href="#">View more</a>
+								<a href="sistema_esqueletico.html">View more</a>
 							</figcaption>
 						</figure>
 						<figure class="effect-ravi">
-							<img src="./sistemarespiratoriogeral.jpg" alt="img1" />
+							<img src="./img/sistemarespiratoriogeral.jpg" alt="img1" />
 							<figcaption>
 								<div style="padding-top: 0px!important">
 									<h2>Sistema respiratório</h2>
@@ -127,7 +126,7 @@
 					</div>
 					<div class="grid">
 						<figure class="effect-ravi">
-							<img src="./neuroanatomy.png" alt="img12" />
+							<img src="./img/neuroanatomy.png" alt="img12" />
 							<figcaption>
 								<div style="padding-top: 0px!important">
 									<h2>Sistema nervoso</h2>
@@ -137,7 +136,7 @@
 							</figcaption>
 						</figure>
 						<figure class="effect-ravi">
-							<img src="./sistemacardiovascular.jpg" alt="img1" />
+							<img src="./img/sistemacardiovascular.jpg" alt="img1" />
 							<figcaption>
 								<div style="padding-top: 0px!important">
 									<h2>Sistema cardiovascular</h2>
@@ -149,17 +148,17 @@
 					</div>
 					<div class="grid">
 						<figure class="effect-ravi">
-							<img src="./sistemamuscular.jpg" alt="img12" />
+							<img src="./img/sistemamuscular.jpg" alt="img12" />
 							<figcaption>
 								<div style="padding-top: 0px!important">
 									<h2>Sistema muscular</h2>
 									<p style="width: 250px;text-align: justify">O Sistema Muscular é o conjunto de músculos que nos permite movimentação do esqueleto, produção de calor, postura e sustentação do corpo.</p>
 								</div>
-								<a href="#">View more</a>
+								<a href="sistema_muscular.html">View more</a>
 							</figcaption>
 						</figure>
 						<figure class="effect-ravi">
-							<img src="./sistemadigestorio.jpg" alt="img1" />
+							<img src="./img/sistemadigestorio.jpg" alt="img1" />
 							<figcaption>
 								<div style="padding-top: 0px!important">
 									<h2>Sistema digestório</h2>
@@ -171,7 +170,7 @@
 					</div>
 					<div class="grid">
 						<figure class="effect-ravi">
-							<img src="./sistemaurinario.jpg" alt="img12" />
+							<img src="./img/sistemaurinario.jpg" alt="img12" />
 							<figcaption>
 								<div style="padding-top: 0px!important">
 									<h2>Sistema genitourinário</h2>
