--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 									<h2>Sistema respiratório</h2>
 									<p style="width: 220px;text-align: justify;color: black">O Sistema Respiratório é um conjunto de órgãos responsáveis pelas trocas gasosas.</p>
 								</div>
-								<a href="#">View more</a>
+								<a href="sistema_respiratorio.html">View more</a>
 							</figcaption>
 						</figure>
 					</div>
@@ -132,7 +132,7 @@
 									<h2>Sistema nervoso</h2>
 									<p style="width: 250px;text-align: justify">O Sistema Nervoso é a parte do organismo que transmite sinais entre as suas diferentes partes e coordena as suas ações voluntárias e involuntárias.</p>
 								</div>
-								<a href="#">View more</a>
+								<a href="sistema_nervoso.html">View more</a>
 							</figcaption>
 						</figure>
 						<figure class="effect-ravi">
@@ -142,7 +142,7 @@
 									<h2>Sistema cardiovascular</h2>
 									<p style="width: 300px;text-align: justify">O Sistema Cardiovascular é um conjunto de órgãos responsáveis pela distribuição de nutrientes para as células e coleta de suas excretas metabólicas para serem eliminadas por órgãos excretores.</p>
 								</div>
-								<a href="#">View more</a>
+								<a href="sistema_cardiovascular.html">View more</a>
 							</figcaption>
 						</figure>
 					</div>
@@ -164,7 +164,7 @@
 									<h2>Sistema digestório</h2>
 									<p style="width: 220px;text-align: justify">O Sistema Digestório é composto por um conjunto de órgãos que tem por função a realização da digestão.</p>
 								</div>
-								<a href="#">View more</a>
+								<a href="sistema_digestorio.html">View more</a>
 							</figcaption>
 						</figure>
 					</div>
@@ -176,7 +176,7 @@
 									<h2>Sistema genitourinário</h2>
 									<p style="width: 240px;text-align: justify">O Sistema Genitourinário é responsável pela produção e eliminação da urina, possui a função de filtrar a impuresa do sangue que circula no organismo.</p>
 								</div>
-								<a href="#">View more</a>
+								<a href="sistema_genitourinario.html">View more</a>
 							</figcaption>
 						</figure>
 					</div>
