--- a/sistema_muscular.html
+++ b/sistema_muscular.html
@@ -78,7 +78,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 text-center text-lg-left my-auto  wow zoomIn" style="text-align: center;">
-					<p class="text-muted small mb-4 mb-lg-0" style="text-align: center;">Desenvolvido por Carla Taís dos Santos 2020.</p>
+					<p class="text-muted small mb-4 mb-lg-0" style="text-align: center;">Desenvolvido por Aleksandra Brizola da Silva 2020.</p>
 					<p class="text-muted small mb-4 mb-lg-0" style="text-align: center;">© Todos os direitos reservados.</p>
 				</div>
 			</div>
