--- a/index.html
+++ b/index.html
@@ -76,15 +76,15 @@
 			<div class="row">
 				<div class="col-md-4 mb-3 wow bounceInUp" data-wow-duration="1.4s">
 					<div class="big-img">
-						<img src="./img/me.jpg"
+						<img src="./img/me_2.jpg"
 							class="img-fluid">
 					</div>
 				</div>
 				<div class="col-md-8">
 					<div class="inner-section wow fadeInUp">
-						<h3>Aleksandra <span class="bg-main">Brizola da Silva</span></h3>
-						<!-- <br> -->
-						<!-- <p class="text-justify">Tenho 22 anos, sou apaixonada por enfermagem, café e netflix. Comecei a cursar no ano de 2019 e desde então não me vejo em outra profissão.</p> -->
+						<h3>Carla <span class="bg-main">Taís dos Santos</span></h3>
+						<br>
+						<p class="text-justify">Tenho 22 anos, sou apaixonada por enfermagem, café e netflix. Comecei a cursar no ano de 2019 e desde então não me vejo em outra profissão.</p>
 					</div>
 				</div>
 			</div>
@@ -189,7 +189,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 text-center text-lg-left my-auto  wow zoomIn" style="text-align: center;">
-					<p class="text-muted small mb-4 mb-lg-0" style="text-align: center;">Desenvolvido por Aleksandra Brizola da Silva 2020.</p>
+					<p class="text-muted small mb-4 mb-lg-0" style="text-align: center;">Desenvolvido por Carla Taís dos Santos 2020.</p>
 					<p class="text-muted small mb-4 mb-lg-0" style="text-align: center;">© Todos os direitos reservados.</p>
 				</div>
 			</div>
